# Group-Expression

./: .gitignore  README.md  adapter.ts  authorAdapter.ts  dna.js  groupExpressionUI.ts  index.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
hc-dna/: Cargo.toml
hc-dna/workdir/: dna.yaml
hc-dna/zomes/group_expression/: Cargo.toml
hc-dna/zomes/group_expression/src/: errors.rs  inputs.rs  lib.rs  methods.rs  outputs.rs  utils.rs
hc-dna/zomes/group_expression_integrity/: Cargo.toml
hc-dna/zomes/group_expression_integrity/src/: lib.rs
hc-dna/zomes/tests/: index.ts  package.json  tsconfig.json
workdir/: dna.yaml
zomes/group_expression/: Cargo.toml
zomes/group_expression/src/: impls.rs  methods.rs
zomes/tests/: index.ts  package-lock.json  package.json
