[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "group_expression"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "group_expression"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1.0.20"

hdk = "0.0.151"
holo_hash = "0.0.31"
group_expression_integrity = { path = "../group_expression_integrity" }